# SuKiN-a.github.io

./: .gitmodules  404.html  CNAME  Cargo.toml  atom.xml  config.toml  index.html  index.js  robots.txt  search_index.en.json  sitemap.xml
.github/workflows/: main.yml
about/: index.html
contact/: index.html
content/: _index.md  dlex.md  druid_live_reload.md
content/about/: _index.md  about.md  index.md
content/contact/: _index.md  index.md
content/posts/Software-engineering-1/: software-engineering-1.md
content/software-engineering-1/: _index.md  peer-assessment.md  self-assessment.md  sprint-1.md  sprint-2.md  sprint-3.md
druid-live-reload/: index.html
page/1/: index.html
pkg/: package.json  portfolio_website.d.ts  portfolio_website.js  portfolio_website_bg.js  portfolio_website_bg.wasm  portfolio_website_bg.wasm.d.ts
posts/: index.html
posts/page/1/: index.html
software-engineering-1/: index.html
software-engineering-1/page/1/: index.html
software-engineering-1/peer-assessment/: index.html
software-engineering-1/self-assessment/: index.html
software-engineering-1/sprint-1/: index.html
software-engineering-1/sprint-2/: index.html
software-engineering-1/sprint-3/: index.html
src/: lib.rs  main.rs
static/: CNAME
