[package]
name = "portfolio_website"
version = "0.1.0"
authors = ["SuKiN-a <suryakiranpradosh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "portfolio_website"

[dependencies]
wasm-bindgen = "0.2"

[dependencies.druid]
version = "0.7"
features = ["jpeg"]